[tool.poetry]
name = "zabbix-sender"
version = "0.1.0"
description = "Asyncio implementation of the Zabbix Sender protocol"
repository = "https://github.com/mastdi/zabbix-sender"
authors = ["Martin Storgaard Dieu <martin@storgaarddieu.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "zabbix_sender"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pre-commit = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
