[tool.poetry]
name = "asyncio-zabbix-sender"
version = "0.2.0"
description = "Asyncio implementation of the Zabbix Sender protocol"
repository = "https://github.com/mastdi/asyncio-zabbix-sender"
authors = ["Martin Storgaard Dieu <martin@storgaarddieu.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "asyncio_zabbix_sender"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pre-commit = "^3.2.1"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
